<resources>
    <string name="app_name">CWRURide</string>
    <string name="title_activity_maps">Map</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="select_date">Select Date</string>
    <string name="select_date_day">Day</string>
    <string name="post_a_ride">Post a Ride</string>
    <string name="description">Description</string>
    <string name="ride_board">View Ride Board</string>
    <string name="request_board">View Request Board</string>
    <string name="my_trips">My Trips</string>
    <string name="trip_history">Trip History</string>
    <string name="buzzwords">Buzzwords</string>
    <string name="help">Help</string>
    <string name="post_this_ride">Post this ride?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="account_detals">Account Details</string>
    <string name="login">Login</string>
    <string name="edit_payment_options">Edit Payment Options</string>
    <string name="car_info_label">Car Information</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>


    <string-array name="timelist">
        <item>0:00</item>
        <item>0:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
    </string-array>

    <string-array name="helpList">
        <item>About</item>
        <item>Accounts</item>
        <item>Posting a Ride</item>
        <item>Accepting a Ride</item>
        <item>Starting and Ending a Ride</item>
        <item>Buzzwords</item>
        <item>Review</item>
    </string-array>

    <string name="posting_ride">In order to post a ride, start by clicking the post button ride on the bottom of the
                                main page. This will bring you to the Post a Ride page. Here you can input all
                                The information about your ride including the pick-up and drop-off locations,
                                date, time and if you will be the driver or the passenger. After clicking the
                                driver or passenger button at the bottom of the page, a confirmation dialog will
                                appear. You can choose to close the dialog and adjust your ride or you can confirm
                                the post and the ride will appear in the appropriate ride and my trips boards.
    </string>
    <string name="accepting_ride">In order to accept a ride you must first decide if you wish to be a passenger or a driver.
                                    If you would like to be a driver, click on the available requests tab from the left slide
                                    menu of the main page. If you wish to be a passenger, click on the available rides tab on
                                    the same slide menu. After clicking on your desired tab, a page with a table of rides will
                                    open. The table will show the time, date and description of the ride along with the rating
                                    of the user who posted it. By clicking on a row in the table, a dialogue will open with more
                                    detailed information about the ride. In this dialogue you can choose to cancel and continue
                                    looking for rides or you can accept the ride which will enter your my trips board.
    </string>
    <string name="start_end">In order to start a ride you must go to your my trips page and click on the ride you would like
                                to start. When you click on a ride a dialogue will open giving you the option to start a ride
                                or to cancel and close the dialogue. Both the driver and the passenger need to start the trip.
                                After starting the trip, if you click on the ride again, the start ride button will become an
                                end ride button. Clicking this will end the ride and once again, both the driver and the passenger
                                need to end the ride. Ending the ride will open up the review page.
    </string>
    <string name="buzzwords_help">Buzzwords are common places that CWRU students may request rides to and from. Buzzwords are useful
                                    for the descriptions you will see on posted rides. You can find buzzwords in the left hand slide
                                    menu. Click on the buzzwords tab to see the names and descriptions of buzzwords so you can use them
                                    when posting and accepting rides.
    </string>
    <string name="accounts">Creating an account is very easy. Start by clicking the options menu in the main page. Open the menu
                            by clicking the three dots in the top right corner. After the menu opens, click on the login page to
                            either login or create and account. To create an account input your email, password, name and number
                            into the lower fields and hit the create account button. Your email must be a CWRU (@case.edu) email.
                            After creating an account you can login by inputting your email and password into the upper fields.
                            After logging in, you can find  your account details in the options menu on the main page.
    </string>
    <string name="about">CWRU Ride is a rideshare app designed for Case Western Reserve University students. The main function of this
                            app is to provide a place where students can post rides to places they want to go making travel for students
                            easier.
    </string>
    <string name="review">After ending a ride, the review page will open for both the driver and the passenger. On this page, you can give
                            the other person a rating from one to five based on how the ride was. A users rating will be the average score
                            they have received from all their rides. If you feel that someone's actions were inappropriate, you can report
                            them by clicking the report button. If a user is reported, actions may be taken which include suspending or banning
                            their account.
    </string>
    <string name="endride">End Ride</string>

</resources>
